solve title visibility issue

--- a/public_html/css/custom.css
+++ b/public_html/css/custom.css
@@ -77,6 +77,10 @@ header.masthead {
 	color: #0c0c0c;
 }
 
+.text-border-black {
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 /* nav */
 #mainNav {
 	background-color: black !important
